Fixed toast issue

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 
 .toast {
   position: fixed;
-  bottom: 30px;
+  top: 30px;
   left: 50%;
   transform: translateX(-50%);
   background-color: #333;
